wip(part-02): add property

--- a/part-02/src/pcd/tla/pcd_assignment01_part02.cfg
+++ b/part-02/src/pcd/tla/pcd_assignment01_part02.cfg
@@ -18,6 +18,7 @@ SPECIFICATION Spec
 \* INVARIANT MyInvariant
 INVARIANT LineCountsAreOk
 PROPERTIES ProducerEndsBeforeConsumers
+PROPERTIES ConsumersDoAllTheWorkBeforeExit
 INVARIANT IfStoppedNoMoreUpdateToResult
 
 (**********************************************)
